--- a/css/common.css
+++ b/css/common.css
@@ -1,12 +1,49 @@
+@font-face{
+	font-family: derp;
+	src: url(fonts/TELE2.ttf);
+}
+body{
+	margin:0px auto;
+}
 .wrapper{
-	/*min-height:blahblahblah;*/
+	min-height:1000px;
 	width:100%;
 
 }
-.menu{
-	background-color:#D9D9D9;
+.menu_cont{
 	width:100%;
-	height:200px;
 	position:absolute;
-	left:0;
+	left: 0;
+	background-color:#D9D9D9;	
+	min-width:1200px;
+	
+}
+.menu{
+
+	width:100%;
+	height:130px;
+	max-width:1200px;
+	margin:5px auto;
+
+}
+.menu_pic_l{
+	margin: 3px auto;
+	
+}
+.menu_tab{
+	width:1200px;
+	margin-top:12px;
+}
+.menu_tab td{
+	width:240px;
+	padding: 10px 0px;
+	text-align:center;
+	outline: 1px #00008A solid;
+	/*font-family: telemarines, Segoe UI, Verdana, Serif;*/
+	font-family:derp;
+	transition:2s;
+}
+.menu_tab td:hover{
+	width:220px;
+	border-left:#B10000;
 }
