--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,29 @@
 .b_header{
 	font-family:"Courier New", Courier, monospace;
 	text-align:center;
+	font-size:36px;
+	position:relative;
+	top:15px;	
+
+}
+.b_headerdesc{
+	font-size: 24px;
+	font-family:"Courier New", Courier, monospace;
+	text-align:center;
+
+}
+.nuke1{
+	width:80%;
+	height:auto;
+	margin:10px auto;
+	display:block;
+}
+.desc{
+	width:80%;
+	margin:20px auto;
+	text-align:justify;
+	text-justify:distribute;
+	text-indent:50px;
+	font-size:20px;
+	line-height:1.3em;
 }
