--- a/css/common.css
+++ b/css/common.css
@@ -9,10 +9,13 @@
 body{
 	margin:0px auto;
 	padding:0px;
+	background-image: url(../images/DSC_2692.jpg);
+	-webkit-background-image: url(../images/DSC_2692.jpg);
 
 }
 .wrapper{
 	min-height:1000px;
+	height:100%;
 	width:100%;
 	position:relative;
 	bottom:5px;
@@ -87,6 +90,7 @@ body{
 	background-color: rgba(255,255,255,0.6);
 	width:70%;
 	max-width:1100px;
+	padding-bottom:20px;
 	margin:50px auto;
 }
 .body_div_cont{
@@ -99,6 +103,7 @@ body{
 	overflow:hidden;
 	background-repeat:no-repeat;
 	background-size:cover;
+
 }
 p{
 	font-family:"Courier New", Courier, monospace;
