--- a/css/common3.css
+++ b/css/common3.css
@@ -1,13 +1,8 @@
 .menu_tab{
 	font-family: Segoe UI, Verdana, serif;
 	font-size: 32px;
-	background-color: #D9D9D9;
-	margin-top:120px;
+	margin:20px auto;
 
-}
-.menu_tab_cont{
-	margin:auto 10%;
-	max-width:200px;
 }
 .menu_tab td{
 	border-bottom: #B10000 1px solid;
@@ -30,16 +25,19 @@ body{
 	overflow:hidden;
 }
 .footer{
-	background-color:#000;
+	background-color:#E0E0E0;
 	height:200px;
 	width:100%;
 	position:absolute;
 	left:0;
-	bottom:-150px;
+	bottom:-110px;
 	transition:.75s;
 	overflow:hidden;
 }
 .footer:hover{
-	box-shadow: 0px 1px 2px 2px #b10000;
+	box-shadow: 0px 1px 2px 2px #E1E1E1;
 	bottom:0px;
+}
+.menu_pic_l{
+	margin: 15px auto 0px auto;
 }
